second homework correction

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Студія</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Портфоліо</a></li>
+                    <li class="menu-item"><a href="/portfolio.html" class="menu-link">Портфоліо</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Контакти</a></li>
                 </ul>
             </nav>
@@ -117,8 +117,8 @@
             </a>
             <address>м. Київ, пр-т Лесі Українки, 26</address>
             <ul class="contacts">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </footer>
