second homework correction

--- a/portfolio.html
+++ b/portfolio.html
@@ -116,8 +116,8 @@
             </a>
             <address class="footer-adress">м. Київ, пр-т Лесі Українки, 26</address>
             <ul class="contacts">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </footer>
