second homework correction

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                         <span class="team-position">Frontend Developer</span>
                     </li>
                     <li class="team-item">
-                        <img class="team-item-img" width="270" src="/images/team-img3.jpg" alt="team">
-                        <span class="team-item-name">Микола Тарасов</span>
-                        <span class="team-item-position">Marketing</span>
+                        <img class="team-img" width="270" src="/images/team-img3.jpg" alt="team">
+                        <span class="team-name">Микола Тарасов</span>
+                        <span class="team-position">Marketing</span>
                     </li>
                     <li class="team-item">
-                        <img class="team-item-img" width="270" src="/images/team-img3.jpg" alt="team">
-                        <span class="team-item-name">Михайло Єрмаков</span>
-                        <span class="team-item-position">UI Designer</span>
+                        <img class="team-img" width="270" src="/images/team-img3.jpg" alt="team">
+                        <span class="team-name">Михайло Єрмаков</span>
+                        <span class="team-position">UI Designer</span>
                     </li>
                 </ul>
             </div>
