--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img class="team-img" width="270" src="/images/team-img1.jpg" alt="team">
+                        <img class="team-img" width="270" src="images/team-img1.jpg" alt="team">
                         <span class="team-name">Ігор Дем'яненко</span>
                         <span class="team-position">Product Designer</span>
                     </li>
                     <li class="team-item">
-                        <img class="team-img" width="270" src="/images/team-img2.jpg" alt="team">
+                        <img class="team-img" width="270" src="images/team-img2.jpg" alt="team">
                         <span class="team-name">Ольга Рєпіна</span>
                         <span class="team-position">Frontend Developer</span>
                     </li>
                     <li class="team-item">
-                        <img class="team-img" width="270" src="/images/team-img3.jpg" alt="team">
+                        <img class="team-img" width="270" src="images/team-img3.jpg" alt="team">
                         <span class="team-name">Микола Тарасов</span>
                         <span class="team-position">Marketing</span>
                     </li>
                     <li class="team-item">
-                        <img class="team-img" width="270" src="/images/team-img3.jpg" alt="team">
+                        <img class="team-img" width="270" src="images/team-img3.jpg" alt="team">
                         <span class="team-name">Михайло Єрмаков</span>
                         <span class="team-position">UI Designer</span>
                     </li>
