--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <div class="container">
                 <h2 class="about-title">Чим ми займаємося</h2>
                 <ul class="about-list">
-                    <li class="about-item"><img class="about-img" width="370" src="/images/about-img1.jpg" alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="images/about-img1.jpg" alt="about">
                     </li>
-                    <li class="about-item"><img class="about-img" width="370" src="/images/about-img2.jpg" alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="images/about-img2.jpg" alt="about">
                     </li>
-                    <li class="about-item"><img class="about-img" width="370" src="/images/about-img3.jpg" alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="images/about-img3.jpg" alt="about">
                     </li>
                 </ul>
             </div>
