--- a/index.html
+++ b/index.html
@@ -37,48 +37,49 @@
     <main class="main">
         <section class="offer">
             <div class="container">
-                <div class="offer-inner">
-                    <h1 class="offer-title">Ефективні рішення для вашого бізнесу</h1>
-                    <button class="offer-btn" type="button">Замовити послугу</button>
-                </div>
+                <h1 class="offer-title">Ефективні рішення для вашого бізнесу</h1>
+                <button class="offer-btn" type="button">Замовити послугу</button>
             </div>
         </section>
-        <div class="benefits">
+        <section class="benefits">
             <div class="container">
                 <ul class="benefits-list">
                     <li class="benefits-item">
-                        <div class="benefits-head">УВАГА ДО ДЕТАЛЕЙ</div>
+                        <h3 class="benefits-head">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з
                             формування позиції.</p>
                     </li>
                     <li class="benefits-item">
-                        <div class="benefits-head">ПУНКТУАЛЬНІСТЬ</div>
+                        <h3 class="benefits-head">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів
                             тягне у себе.</p>
                     </li>
 
                     <li class="benefits-item">
-                        <div class="benefits-head">ПЛАНУВАННЯ</div>
+                        <h3 class="benefits-head">ПЛАНУВАННЯ</h3>
                         <p class="benefits-text">Так само консультація з широким активом значною мірою зумовлює.
                         </p>
                     </li>
                     <li class="benefits-item">
-                        <div class="benefits-head">СУЧАСНІ ТЕХНОЛОГІЇ</div>
+                        <h3 class="benefits-head">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових
                             завдань.</p>
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
         <section class="about">
             <div class="container">
                 <h2 class="about-title">Чим ми займаємося</h2>
                 <ul class="about-list">
-                    <li class="about-item"><img class="about-img" width="370" src="images/about-img1.jpg" alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="../images/about-img1.jpg"
+                            alt="about">
                     </li>
-                    <li class="about-item"><img class="about-img" width="370" src="images/about-img2.jpg" alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="../images/about-img2.jpg"
+                            alt="about">
                     </li>
-                    <li class="about-item"><img class="about-img" width="370" src="images/about-img3.jpg" alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="../images/about-img3.jpg"
+                            alt="about">
                     </li>
                 </ul>
             </div>
@@ -89,23 +90,23 @@
                 <ul class="team-list">
                     <li class="team-item">
                         <img class="team-img" width="270" src="images/team-img1.jpg" alt="team">
-                        <span class="team-name">Ігор Дем'яненко</span>
-                        <span class="team-position">Product Designer</span>
+                        <h3 class="team-name">Ігор Дем'яненко</h3>
+                        <p class="team-position">Product Designer</p>
                     </li>
                     <li class="team-item">
                         <img class="team-img" width="270" src="images/team-img2.jpg" alt="team">
-                        <span class="team-name">Ольга Рєпіна</span>
-                        <span class="team-position">Frontend Developer</span>
+                        <h3 class="team-name">Ольга Рєпіна</h3>
+                        <p class="team-position">Frontend Developer</p>
                     </li>
                     <li class="team-item">
                         <img class="team-img" width="270" src="images/team-img3.jpg" alt="team">
-                        <span class="team-name">Микола Тарасов</span>
-                        <span class="team-position">Marketing</span>
+                        <h3 class="team-name">Микола Тарасов</h3>
+                        <p class="team-position">Marketing</p>
                     </li>
                     <li class="team-item">
                         <img class="team-img" width="270" src="images/team-img3.jpg" alt="team">
-                        <span class="team-name">Михайло Єрмаков</span>
-                        <span class="team-position">UI Designer</span>
+                        <h3 class="team-name">Михайло Єрмаков</h3>
+                        <p class="team-position">UI Designer</p>
                     </li>
                 </ul>
             </div>
@@ -116,11 +117,13 @@
             <a href="#" class="logo">
                 <span>Web</span>Studio
             </a>
-            <address>м. Київ, пр-т Лесі Українки, 26</address>
-            <ul class="contacts">
-                <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            <address class="footer-address">
+                <p>м. Київ, пр-т Лесі Українки, 26</p>
+                <ul class="contacts">
+                    <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
         </div>
     </footer>
 </body>
