--- a/portfolio.html
+++ b/portfolio.html
@@ -114,11 +114,13 @@
             <a href="#" class="logo">
                 <span>Web</span>Studio
             </a>
-            <address class="footer-adress">м. Київ, пр-т Лесі Українки, 26</address>
-            <ul class="contacts">
-                <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            <address class="footer-address">
+                <p>м. Київ, пр-т Лесі Українки, 26</p>
+                <ul class="contacts">
+                    <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
         </div>
     </footer>
 </body>
