--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>
             <nav class="nav">
                 <ul class="menu">
-                    <li class="menu-item"><a href="#" class="menu-link">Студія</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link studio">Студія</a></li>
                     <li class="menu-item"><a href="portfolio.html" class="menu-link">Портфоліо</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Контакти</a></li>
                 </ul>
@@ -72,14 +72,11 @@
             <div class="container">
                 <h2 class="about-title">Чим ми займаємося</h2>
                 <ul class="about-list">
-                    <li class="about-item"><img class="about-img" width="370" src="../images/about-img1.jpg"
-                            alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="images/about-img1.jpg" alt="about">
                     </li>
-                    <li class="about-item"><img class="about-img" width="370" src="../images/about-img2.jpg"
-                            alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="images/about-img2.jpg" alt="about">
                     </li>
-                    <li class="about-item"><img class="about-img" width="370" src="../images/about-img3.jpg"
-                            alt="about">
+                    <li class="about-item"><img class="about-img" width="370" src="images/about-img3.jpg" alt="about">
                     </li>
                 </ul>
             </div>
@@ -120,8 +117,8 @@
             <address class="footer-address">
                 <p>м. Київ, пр-т Лесі Українки, 26</p>
                 <ul class="contacts">
-                    <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a class="footer-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
