--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
             </a>
             <nav class="nav">
                 <ul class="menu">
-                    <li class="menu-item"><a href="#" class="menu-link">Студія</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Портфоліо</a></li>
+                    <li class="menu-item"><a href="index.html" class="menu-link">Студія</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link portfolio">Портфоліо</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Контакти</a></li>
                 </ul>
             </nav>
@@ -53,59 +53,59 @@
                     <button type="button" class="filters-btn">Маркетинг</button>
                 </li>
             </ul>
-            <div class="filters-grid">
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img1.jpg" width="370" alt="Технокряк"></div>
-                    <div class="filters-name">Технокряк</div>
-                    <div class="filters-type">Веб-сайт</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img3.jpg" width="370"
+            <ul class="filters-grid">
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img1.jpg" width="370" alt="Технокряк"></div>
+                    <h2 class="filters-name">Технокряк</div>
+                        <div class="filters-type">Веб-сайт</div>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img3.jpg" width="370"
                             alt="Постер New Orlean vs Golden Star">
                     </div>
-                    <div class="filters-name">Постер New Orlean vs Golden Star</div>
-                    <div class="filters-type">Дизайн</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img4.jpg" width="370" alt="Ресторан Seafood">
+                    <h2 class="filters-name">Постер New Orlean vs Golden Star</h2>
+                    <p class="filters-type">Дизайн</p>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img4.jpg" width="370" alt="Ресторан Seafood">
                     </div>
-                    <div class="filters-name">Ресторан Seafood</div>
-                    <div class="filters-type">Додаток</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img5.jpg" width="370" alt="Проєкт Prime"></div>
-                    <div class="filters-name">Проєкт Prime</div>
+                    <h2 class="filters-name">Ресторан Seafood</h2>
+                    <p class="filters-type">Додаток</p>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img5.jpg" width="370" alt="Проєкт Prime"></div>
+                    <h2 class="filters-name">Проєкт Prime</h2>
                     <div class="filters-type">Маркетинг</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img2.jpg" width="370" alt="Проєкт Boxes"></div>
-                    <div class="filters-name">Проєкт Boxes</div>
-                    <div class="filters-type">Додаток</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img6.jpg" width="370"
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img2.jpg" width="370" alt="Проєкт Boxes"></div>
+                    <h2 class="filters-name">Проєкт Boxes</h2>
+                    <p class="filters-type">Додаток</p>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img6.jpg" width="370"
                             alt="Inspiration has no Borders"></div>
-                    <div class="filters-name">Inspiration has no Borders</div>
-                    <div class="filters-type">Веб-сайт</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img7.jpg" width="370"
+                    <h2 class="filters-name">Inspiration has no Borders</h2>
+                    <p class="filters-type">Веб-сайт</p>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img7.jpg" width="370"
                             alt="Видання Limited Edition"></div>
-                    <div class="filters-name">Видання Limited Edition</div>
-                    <div class="filters-type">Дизайн</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img8.jpg" width="370" alt="Проект LAB"></div>
-                    <div class="filters-name">Проект LAB</div>
-                    <div class="filters-type">Маркетинг</div>
-                </div>
-                <div class="filters-item">
-                    <div class="filters-img"><img src="/images/filters-img9.jpg" width="370" alt="Growing Business">
+                    <h2 class="filters-name">Видання Limited Edition</h2>
+                    <p class="filters-type">Дизайн</p>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img8.jpg" width="370" alt="Проект LAB"></div>
+                    <h2 class="filters-name">Проект LAB</h2>
+                    <p class="filters-type">Маркетинг</p>
+                </li>
+                <li class="filters-item">
+                    <div class="filters-img"><img src="images/filters-img9.jpg" width="370" alt="Growing Business">
                     </div>
-                    <div class="filters-name">Growing Business</div>
-                    <div class="filters-type">Додаток</div>
-                </div>
-            </div>
+                    <h2 class="filters-name">Growing Business</h2>
+                    <p class="filters-type">Додаток</p>
+                </li>
+            </ul>
         </section>
 
     </main>
@@ -117,8 +117,8 @@
             <address class="footer-address">
                 <p>м. Київ, пр-т Лесі Українки, 26</p>
                 <ul class="contacts">
-                    <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a class="footer-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
